# FITPAC

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md
FITPAC/: master_index.yaml  (+2 more)
FITPAC/extensions/fitpac_prose_compiler/: CHANGELOG.md  README.md  fitpac_prose_compiler_manifest.yaml  pyproject.toml
FITPAC/extensions/fitpac_prose_compiler/docs/guides/: prose-to-primitives-pipeline.md
FITPAC/extensions/fitpac_prose_compiler/docs/patterns/: index.md
FITPAC/extensions/fitpac_prose_compiler/docs/reference/: SCHEMA_INDEX.md  extension-overview.md  fitpac-prose-compiler-profile-v0.md  fitpac_classification_ontology.v0.1.0.json
FITPAC/extensions/fitpac_prose_compiler/docs/reference/fitpac_prose_compiler/binding/: binding_contract_v0.yaml
FITPAC/extensions/fitpac_prose_compiler/docs/reference/fitpac_prose_compiler/profiles/: fitpac.prose_compiler.compiler_profile_v0.yaml
FITPAC/extensions/fitpac_prose_compiler/patterns/: fitpac_prose_compiler.md
FITPAC/extensions/fitpac_prose_compiler/rfcs/: RFC-0006-FITPAC-prose-compiler-extension.md
FITPAC/extensions/fitpac_prose_compiler/tools/: validate_artifact.py
FITPAC/extensions/fitpac_prose_compiler/tools/fitpac_prose_compiler_validate/: __init__.py  paths.py  schema_bundle.py  validate.py
FITPAC/extensions/fitpac_prose_compiler/tools/tests/: test_validators.py
FITPAC/extensions/fitpac_prose_compiler/tools/tests/fixtures/: illegal_committed_edge.json  open_resolution_blocks_ready.json  partial_missing_flags.json  unknown_inventory_id.json  valid_minimal_graph.json
(+93 files in other folders)
