[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitpac-prose-compiler-validate"
version = "0.2.0"
description = "Validators for the fitpac.prose_compiler FITPAC extension pack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
testpaths = ["tools/tests"]
